fixed title overspilling

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ button {
 }
 /*start HEADER page section*/
 #header {
-  grid-column: 1 / span 5;
+  grid-column: 1 / span 2;
   grid-row: 1;
 }
 #user-prompt {
